# tauri-pw-manager

./: .gitignore  .taurignore  Cargo.toml  README.md  Tauri.toml  package-lock.json  package.json  tauri.conf.json  tsconfig.json  vite.config.ts
assets/: icon.icns
src/: AddPage.tsx  LoginPage.tsx  SignUpPage.tsx  StartPage.tsx  backend.tsx  cryptography.rs  database.rs  error.rs  index.html  logs.rs  main.rs  main.tsx  state.tsx  utils.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cryptography.rs  database.rs  error.rs  main.rs
ui/: AddPage.tsx  LoginPage.tsx  SignUpPage.tsx  StartPage.tsx  backend.tsx  index.html  main.tsx  utils.tsx
