[package]
name = "pw-manager"
version = "0.1.0"
authors = ["Axel Lindeberg"]
default-run = "pw-manager"
edition = "2021"

[dependencies]
tauri = { version = "1.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
openssl = "0.10"
once_cell = "1.13"
arboard = "2.1.1"
simple_logger = "2.2.0"
log = "0.4.17"

[build-dependencies]
tauri-build = { version = "1.0", features = [] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
