[package]
name = "pw-manager"
version = "0.1.0"
authors = ["Axel Lindeberg"]
default-run = "pw-manager"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.0", features = [] }

[dependencies]
tauri = { version = "1.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
openssl = "0.10"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
